src/GoogleHome.css
.google-home{
  display: grid;
  grid-template-rows: 10vh 75vh 15vh;
}
.header-container{
  display: flex;
  width: 100%;
  height: minmax(20%, 200px);
  flex-direction: row;
  justify-content: space-between;
}
.header-item{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  align-items: center; 
}
.hlist-item{
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  justify-content: center;
  align-content: center;
  align-items: center;
}
#blank{flex-grow: 5;}
#a-image{
  border-radius: 50%;
}
#a-image:hover{box-shadow: 0 1px 0 rgb(0 0 0 / 15%);}

.search-container{
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: stretch;
  align-content: center;
  /* grid-template-rows: 3fr 1fr 2fr; */
}
.search{
  display: flex;
  justify-content: center;
  flex-basis: 0;
}
.g-img{
  flex-grow: 1.2;
  flex-direction: column; 
  justify-content: flex-end;
  align-items: center;
}
.bar{
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  width: 100%;
  align-items: stretch; 
  justify-content: flex-start;
}
.search-text{
  /* height: 100%; */
  position: relative;
  flex-grow: 1;
  width: 100%;
  flex-basis: 0;
  display: flex;
}
.search-outline{
  width: 65%;
  height: 44px;
  margin: auto;
  border-radius: 24px;
  border: 1px solid #dfe1e5;
  display: flex;
  flex-direction: row;
}
.icons{
  flex-grow: 0.6;
  margin: auto;
}
#microphone-icon{
  order: 3;
}
#search-icon{
  order: 1;
}
#search-input{
  flex-grow: 5;
  order: 2;
  outline: none;
  border: 0px;
}
input:focus{
  border-radius: 24px;
  outline: none;
}
/* input[type="text"]{
  padding-left: 5%;
} */
.button-link-container{
  flex-grow: 1.2;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.button-links{
  background-color: #f8f9fa;
  border: 1px solid #f8f9fa;
  border-radius: 4px;
  color: #3c4043;
  font-family: arial,sans-serif;
  font-size: 14px;
  margin: 11px 4px;
  padding: 3px 16px;
  line-height: 27px;
  height: 36px;
  min-width: 54px;
  text-align: center;
}
.button-links:hover{
  cursor: pointer;
}
#empty{ 
  flex-grow: 1;
  flex-shrink: 0;
}
#google-img{
  height: 92px;
  width: 272px;
}
.footer-container{
  background-color: lightgray;
  display: grid;
  width: 100%;
  height: minmax(20%, 200px);
  grid-template-rows:  1fr 1fr;
}
.location-container{
  /* Need to add the border at the bottom */
  border-style: solid;
  border-width: 0px 0px 2px 0px;
}
#uk{
  padding: 2vh 2vw;
}
.footer-list{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.center{
  flex-grow: 1;
}
#carbon-center{
  display: flex;
  justify-content: center;
  align-content: center;
  align-items: center;
  padding: auto;
}
.right{
  display: flex;
  flex-direction: row;
  padding: 2vh 2vw;
  flex-grow: 1;
}
.left{
  display: flex;
  flex-direction: row;
  padding: 2vh 2vw;
  flex-grow: 0.5;
}
.list-item{
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}

